correctons notification correction

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,9 @@
 :root{
     --bg-grad:linear-gradient(#0464e1,#3e75ff,#0048ff,#198dfa,#DBD1F7,);
 }
-
+.ant-notification-notice-message{
+    color: white !important;
+}
 .bg_vector_mobile_1{
     align-content: center;
     align-items: center;
